--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,9 @@ jobs:
     #         name: Chmod permissions #if permission for Gradlew Dependencies fail, use this.
     #         command: sudo chmod +x ./gradlew
     - run:
+        name: Chmod permissions #if permission for Gradlew Dependencies fail, use this.
+        command: sudo chmod +x ./gradlew
+    - run:
         name: Download Dependencies
         command: ./gradlew androidDependencies
     - save_cache:
