Começo do desenvolvimento do consumo da api

--- a/search/src/main/AndroidManifest.xml
+++ b/search/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
             android:theme="@style/AppTheme"
             tools:ignore="GoogleAppIndexingWarning">
 
-        <activity android:name=".SearchActivity"
+        <activity android:name=".presentation.SearchActivity"
                 android:theme="@style/AppTheme.NoActionBar"/>
 
     </application>
