--- a/search/build.gradle
+++ b/search/build.gradle
@@ -9,7 +9,7 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
@@ -21,12 +21,21 @@ android {
 }
 
 dependencies {
+    implementation project(':network')
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:appcompat-v7:28.1.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'org.koin:koin-core:2.0.0-beta-1'
+    implementation 'org.koin:koin-core-ext:2.0.0-beta-1'
+    implementation 'org.koin:koin-android:2.0.0-beta-1'
+    implementation 'org.koin:koin-android-scope:2.0.0-beta-1'
+    implementation 'org.koin:koin-android-viewmodel:2.0.0-beta-1'
+    implementation "org.koin:koin-androidx-scope:2.0.0-beta-1"
+    implementation "org.koin:koin-androidx-viewmodel:2.0.0-beta-1"
 }
 
 repositories {
