--- a/network/build.gradle
+++ b/network/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'java-library'
+apply plugin: 'org.jetbrains.kotlin.jvm'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
