--- a/search/build.gradle
+++ b/search/build.gradle
@@ -42,13 +42,14 @@ dependencies {
 
     implementation 'io.reactivex.rxjava2:rxjava:2.2.7'
 
-    implementation 'org.koin:koin-core:2.0.0-beta-1'
-    implementation 'org.koin:koin-core-ext:2.0.0-beta-1'
-    implementation 'org.koin:koin-android:2.0.0-beta-1'
-    implementation 'org.koin:koin-android-scope:2.0.0-beta-1'
-    implementation 'org.koin:koin-android-viewmodel:2.0.0-beta-1'
+    implementation 'org.koin:koin-core:1.0.2'
+    implementation 'org.koin:koin-core-ext:1.0.2'
+    implementation 'org.koin:koin-android:1.0.2'
+    implementation 'org.koin:koin-android-scope:1.0.2'
+    implementation 'org.koin:koin-android-viewmodel:1.0.2'
 
     testImplementation 'junit:junit:4.12'
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0"
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test:rules:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
