--- a/search/src/main/AndroidManifest.xml
+++ b/search/src/main/AndroidManifest.xml
@@ -6,10 +6,11 @@
             android:label="@string/app_name"
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
+            android:name=".App"
             tools:ignore="GoogleAppIndexingWarning">
 
         <activity android:name=".presentation.SearchActivity"
-                android:theme="@style/AppTheme.NoActionBar"/>
+                  android:theme="@style/AppTheme.NoActionBar"/>
 
     </application>
 
