--- a/search/src/main/AndroidManifest.xml
+++ b/search/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
           package="com.chucknorrisfacts.search">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
             android:allowBackup="true"
             android:label="@string/app_name"
@@ -9,10 +12,10 @@
             android:name=".App"
             tools:ignore="GoogleAppIndexingWarning">
 
-        <activity android:name=".presentation.FactsActivity"
+        <activity android:name=".presentation.facts.FactsActivity"
                   android:theme="@style/AppTheme.NoActionBar"/>
 
-        <activity android:name=".presentation.SearchActivity"
+        <activity android:name=".presentation.search.SearchActivity"
                   android:theme="@style/AppTheme.NoActionBar"/>
 
     </application>
