--- a/search/build.gradle
+++ b/search/build.gradle
@@ -48,6 +48,8 @@ dependencies {
 
     implementation 'io.reactivex.rxjava2:rxjava:2.2.7'
 
+    implementation 'com.github.pakoito:RxPaper2:1.4.0'
+
     implementation 'org.koin:koin-core:1.0.2'
     implementation 'org.koin:koin-core-ext:1.0.2'
     implementation 'org.koin:koin-android:1.0.2'
