--- a/search/build.gradle
+++ b/search/build.gradle
@@ -56,7 +56,10 @@ dependencies {
     implementation 'org.koin:koin-android-scope:1.0.2'
     implementation 'org.koin:koin-android-viewmodel:1.0.2'
 
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+
     testImplementation 'junit:junit:4.12'
+    testImplementation "android.arch.core:core-testing:1.1.1"
     testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0"
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test:rules:1.0.2'
